--- a/Chalkable.Web/Views/Shared/_RoleLayout.cshtml
+++ b/Chalkable.Web/Views/Shared/_RoleLayout.cshtml
@@ -66,7 +66,7 @@
                 <div id="main-top">
                 </div>
                 <div id="main-wrapper">
-                    <div id="main" class="container-ajax-loader">
+                    <div id="main">
                         @RenderBody()
                     </div>
                 </div>
