--- a/Chalkable.Web/assets/jade/sidebars/SysAdminSidebar.jade
+++ b/Chalkable.Web/assets/jade/sidebars/SysAdminSidebar.jade
@@ -1,13 +1,13 @@
-a#home-logo Home
++ActionLink('sysadmin', 'index')#home-logo Home
 #sidebar-controls
     .search-wrapper
         #search-bar
     .wrapper
         .buttons-row
-            +ActionLink('schools', 'view').one-third-button.peoples.pressed(title="View Schools") Schools
-            +ActionLink('applications', 'index').one-third-button.apps(title="View Applications") Apps
-            +ActionLink('settings', 'dashboard').one-third-button.settings(title="View System Types") Settings
+            +ActionLink('sysadmin', 'index').one-third-button.peoples.pressed(title="View Schools") Schools
+            +ActionLink('sysadmin', 'apps').one-third-button.apps(title="View Applications") Apps
+            +ActionLink('sysadmin', 'settings').one-third-button.settings(title="View System Types") Settings
         .buttons-row
-            +ActionLink('funds', 'list').one-third-button.statistic(title="View Purchase Order") Purchase Order
-            +ActionLink('settings', 'signup').one-third-button.settings(title="View Signups") Signups
+            +ActionLink('sysadmin', 'funds').one-third-button.statistic(title="View Purchase Order") Purchase Order
+            +ActionLink('sysadmin', 'settings').one-third-button.settings(title="View Signups") Signups
 #invite-button-container
