--- a/Chalkable.Web/assets/jade/activities/Schools.jade
+++ b/Chalkable.Web/assets/jade/activities/Schools.jade
@@ -1,4 +1,2 @@
 .schools
-    +RenderWith(self.items, chlk.templates.School)(
-    renderLink = true)
-h5 Schools (page #{self.page}, page size #{self.pageSize}, total #{self.count})
+    +Grid(self.items, chlk.templates.School, paging = true)
