--- a/Chalkable.Web/assets/jade/controls/grid.jade
+++ b/Chalkable.Web/assets/jade/controls/grid.jade
@@ -1,5 +1,5 @@
-mixin Grid(data, tplClass, needsPaging)
-    .grid
+mixin Grid(data, needsPaging)
+    .grid(attributes)
         .items
             +RenderWith(data.items, tplClass)
         if needsPaging = true
