--- a/Chalkable.Web/assets/sass/partials/_sidebar.scss
+++ b/Chalkable.Web/assets/sass/partials/_sidebar.scss
@@ -1,7 +1,7 @@
 @import "compass/css3/text-shadow";
 
-@import "partials/sidebar/controls";
-@import "partials/sidebar/week";
+@import "partials/sidebar/_controls";
+@import "partials/sidebar/_week";
 
 $sidebar-width: 300px;
 
