--- a/Chalkable.Web/assets/jade/activities/Schools.jade
+++ b/Chalkable.Web/assets/jade/activities/Schools.jade
@@ -1,2 +1,29 @@
 .schools
-    +Grid(self, chlk.templates.School, paging = true)
+    .action-bar.not-transparent
+        .container.panel-bg
+            +ActionLink('sysadmin', 'index').chlk-add.opacity-button Add School
+    .grid.not-transparent
+        .container
+            .head.panel-bg
+                .th School Name
+                .th Local ID
+                .th NCES ID
+                .th School Type
+                .th URL
+                .th
+
+            .body
+                each item in self.items
+                    .row
+                        .td= item.getName()
+                        .td= item.getLocalid()
+                        .td= item.getNcesid()
+                        .td= item.getSchooltype()
+                        .td= item.getSchoolurl()
+                        .td.action-links
+                            +ActionLink('sysadmin', 'index').profile
+                            +ActionLink('sysadmin', 'index').view
+                            +ActionLink('sysadmin', 'index').remove
+                            +ActionLink('sysadmin', 'index').persons
+            .footer
+                +Paginator('sysadmin', 'index', self)
