--- a/Chalkable.Web/assets/jade/controls/paginator.jade
+++ b/Chalkable.Web/assets/jade/controls/paginator.jade
@@ -1,21 +1,21 @@
 mixin Paginator(controller, action, data)
     pd = self.preparePaginationData(data)
-    -start = data.pageindex*data.pagesize + 1;
-    -end = start + data.pagesize - 1;
     .paginator-container
         .left-container
-            +ActionLink(controller, action, 0)(class = pd.hasFirstLink ? '' : 'disabled')
-
-            A(class='first-page' + (data.haspreviouspage ? '' : ' disabled'))
-            A(class='prev-page' + (data.haspreviouspage ? '' : ' disabled'))
+            +ActionLink(controller, action, 0)(class =  'first-page' + (pd.hasPreviousPage ? '' : ' disabled'))
+            +ActionLink(controller, action, pd.prevPageIndex)(class =  'prev-page' + (pd.hasPreviousPage ? '' : ' disabled'))
             .info-container
-                label(for='current-page') Page
-                input(name='current-page', value=(data.pageindex+1))
-                span
-                    | of #{data.totalpages}
-            A(class='next-page' + (data.hasnextpage ? '' : ' disabled'))
-            A(class='last-page' + (data.hasnextpage ? '' : ' disabled'))
+                form
+                    label(for='current_page') Page
+                    input(name='current_page', value=pd.nextPageIndex).page-value
+                    span
+                        | of #{data.totalpages}
+                    input(type="submit")
+                    input(type="hidden",name="controller",value=controller).controller-name
+                    input(type="hidden",name="action",value=action).action-name
+            +ActionLink(controller, action, pd.nextPageIndex)(class =  'next-page' + (pd.hasNextPage ? '' : ' disabled'))
+            +ActionLink(controller, action, pd.lastPageIndex)(class =  'last-page' + (pd.hasNextPage ? '' : ' disabled'))
         .right-container
             SPAN
-                |Displaying #{start} - #{end} of #{data.totalcount}
+                |Displaying #{pd.start} - #{pd.end} of #{pd.totalCount}
         .clear
