--- a/Chalkable.Web/assets/sass/partials/controls/_grid.scss
+++ b/Chalkable.Web/assets/sass/partials/controls/_grid.scss
@@ -45,6 +45,7 @@ $border-color: #a1a1a1;
         }
 
         .td{
+          padding: 3px 6px;
           display: table-cell;
         }
       }
