--- a/Chalkable.Web/assets/sass/screen.scss
+++ b/Chalkable.Web/assets/sass/screen.scss
@@ -170,7 +170,6 @@ HTML {
 
     .x-window-body{
       padding: 5px 15px 0px 0px;
-      text-align: center;
 
 
       .x-fieldset-header-text{
@@ -182,11 +181,10 @@ HTML {
     }
 
     &.gray{
-      left: 183px;
+      left: 191px;
       top: 75px;
-      min-width: 414px;
+      min-width: 390px;
       min-height: 500px;
-
       background: #e7e7e7;
       border: 1px solid #adadad;
       border-radius: 15px;
@@ -195,7 +193,46 @@ HTML {
 
 
     &.add-school{
+        .x-window-body{
 
+
+          .sumbit-btn{
+              margin-left: 180px;
+              margin-top: 25px;
+              margin-right: 5px;
+          }
+          .cancel-btn{
+
+          }
+
+          .x-form-field{
+            margin-bottom: 4px;
+            label{
+              width: 125px;
+              display: inline-block;
+              text-align: right;
+              height: 18px;
+              color: #808080;
+              font: normal 14px tahoma, arial, helvetica, sans-serif;
+              padding: 3px;
+              padding-left: 0;
+            }
+
+
+            input{
+              width: 222px;
+              border-radius: 5px;
+
+
+              &.checkbox-last{
+                  width: 12px;
+                  margin-bottom: 40px;
+              }
+
+            }
+          }
+
+        }
     }
   }
 }
