--- a/Chalkable.Web/assets/sass/screen.scss
+++ b/Chalkable.Web/assets/sass/screen.scss
@@ -177,6 +177,8 @@ HTML {
         color: #15428b;
         margin-left: 20px;
         text-align: left;
+        margin-bottom: 15px;
+        display: inline-block;
       }
     }
 
