--- a/Chalkable.Web/assets/jade/activities/add-school/dialog.jade
+++ b/Chalkable.Web/assets/jade/activities/add-school/dialog.jade
@@ -1,5 +1,4 @@
 .dialog.add-school.gray
-    -console.log(self._model)
     .x-window-header
         span Add/Edit School
     .x-window-body
@@ -11,25 +10,25 @@
                     input(type="text",name="name", value=self.name)
                 .x-form-field
                     label LocalID:
-                    input(type="text",name="localid", value=self.localid)
+                    input(type="text",name="localid", value=self.localId)
                 .x-form-field
                     label NCES ID:
-                    input(type="text",name="ncesid", value=self.ncesid)
+                    input(type="text",name="ncesid", value=self.ncesId)
                 .x-form-field
                     label Type:
-                    input(type="text",name="schooltype", value=self.schooltype)
+                    input(type="text",name="schooltype", value=self.schoolType)
                 .x-form-field
                     label URL:
-                    input(type="text",name="schoolurl", value=self.schoolurl)
+                    input(type="text",name="schoolurl", value=self.schoolUrl)
                 .x-form-field
                     label State/Province ID:
                     input
                 .x-form-field
                     label SChool TimeZone:
-                    input(type="text",name="timezoneid", value=self.timezoneid)
+                    input(type="text",name="timezoneid", value=self.timezoneId)
                 .x-form-field
                     label Send EmailNotifications:
-                    input(type="checkbox", name="sendemailnotifications", value=self.sendemailnotifications).checkbox-last
+                    +Checkbox("sendemailnotifications", self.sendEmailNotifications).checkbox-last
                 span.x-fieldset-header-text Principal Information
                 .x-form-field
                     label Contact Title:
@@ -37,5 +36,5 @@
                 .x-form-field
                     label Contact Name:
                     input
-                +Button(type="submit").special-button.blue-button.sumbit-btn Submit
+                +Button(type="submit").special-button.blue-button.submit-btn Submit
                 +Button.special-button.red-button Cancel
