--- a/Chalkable.Web/assets/sass/screen.scss
+++ b/Chalkable.Web/assets/sass/screen.scss
@@ -198,7 +198,7 @@ HTML {
         .x-window-body{
 
 
-          .sumbit-btn{
+          .submit-btn{
               margin-left: 180px;
               margin-top: 25px;
               margin-right: 5px;
