renamed model properties

--- a/Chalkable.Web/assets/jade/activities/school/SchoolDetails.jade
+++ b/Chalkable.Web/assets/jade/activities/school/SchoolDetails.jade
@@ -12,7 +12,7 @@
             .big-img-container
         .right
             h1= self.getName()
-            .status #{self.getStatusnumber()}. #{self.getStatus()}
+            .status #{self.getStatusNumber()}. #{self.getStatus()}
                 +Button() My Button
         .clear
 
