added special buttons

--- a/Chalkable.Web/assets/jade/activities/school/SchoolDetails.jade
+++ b/Chalkable.Web/assets/jade/activities/school/SchoolDetails.jade
@@ -13,6 +13,6 @@
         .right
             h1= self.getName()
             .status #{self.getStatusNumber()}. #{self.getStatus()}
-                +Button() My Button
+                +Button().special-button2.blue My Button
         .clear
 
