added glance box control

--- a/Chalkable.Web/assets/sass/partials/_controls.scss
+++ b/Chalkable.Web/assets/sass/partials/_controls.scss
@@ -1,3 +1,4 @@
 @import "partials/controls/_grid";
 @import "partials/controls/_paginator";
 @import "partials/controls/_action-bar";
+@import "partials/controls/_glance-box";
