--- a/Chalkable.Web/assets/jade/controls/grid.jade
+++ b/Chalkable.Web/assets/jade/controls/grid.jade
@@ -8,5 +8,5 @@ mixin Grid(data, configs)
                     img.avatar.avatar47(src="https://dev.chalkable.com/PersonPicture/Read?pictureId=0&width=47&height=47&gender=F")
                 p.left= item.getFullname()
                 .right
-                    +Button().message-button Message
+                    +Button().message-button.blue-gradient-btn Message
                 .clear
