--- a/Chalkable.Web/assets/sass/partials/main/_buttons.scss
+++ b/Chalkable.Web/assets/sass/partials/main/_buttons.scss
@@ -217,6 +217,12 @@
     padding: 7px 28px 9px;
     font: normal 12px Arial;
     text-shadow: 0 -1px 0 #305263;
+
+    BUTTON{
+      background: transparent;
+      border: 0;
+      color: white;
+    }
     @include background(linear-gradient(top, #568da7, #2f667d));
     border: 1px solid #29596e;
     @include border-radius(4px);
