--- a/Chalkable.Web/assets/sass/partials/_main.scss
+++ b/Chalkable.Web/assets/sass/partials/_main.scss
@@ -2,6 +2,7 @@
 @import "compass/css3/images";
 
 @import "partials/main/_buttons";
+@import "partials/main/_profile";
 @import "partials/main/people/_list";
 
 BODY {
