--- a/Chalkable.Web/assets/sass/partials/controls/_action-bar.scss
+++ b/Chalkable.Web/assets/sass/partials/controls/_action-bar.scss
@@ -57,9 +57,14 @@ DIV#content-wrapper{
     }
   }
 
+  &.not-transparent{
+    .container{
+      @include border-radius(5px);
+    }
+  }
+
   .container{
     height: 34px;
-    @include border-radius(5px);
     border-bottom: 1px solid $border-color;
     border-top: 1px solid white;
 
