--- a/Chalkable.Web/Views/Shared/_RoleLayout.cshtml
+++ b/Chalkable.Web/Views/Shared/_RoleLayout.cshtml
@@ -12,18 +12,16 @@
     <link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css' />
     <!-- Whole Site CSS -->
     <link href="@Url.StaticContent("/Content/screen.css")" rel="stylesheet" media="screen, projection" type="text/css" />
-    <link href="@Url.StaticContent("/Scripts/jquery/snippet/jquery.snippet.min.css")" rel="stylesheet" type="text/css" />
-    <link href="@Url.StaticContent("/Scripts/jquery/smoothness/jquery-ui.css")" rel="stylesheet" type="text/css" />
-    <link href="@Url.StaticContent("/Scripts/jquery/validation/css/validationEngine.jquery.css")" rel="stylesheet" type="text/css" />
-    <link href="@Url.StaticContent("/Scripts/jquery/validation/css/template.css")" rel="stylesheet" type="text/css"/>  
+    <link href="@Url.StaticContent("/app/jquery/choosen/chosen.min.css")" rel="stylesheet" type="text/css" />
     <!-- Page specific CSS -->
     @RenderSection("Styles", false)
     @ChlkHelpers.GoogleAnalytics()
     <script type="text/javascript" src="@Url.StaticContent("/app/chlk/shared.js")"></script>
     <script type="text/javascript" src="@Url.StaticContent("/Scripts/chlk-messages.js")"></script>
+    <script type="text/javascript" src="@Url.StaticContent("/app/jquery/jquery-2.0.2.min.js")"></script>
+    <script type="text/javascript" src="@Url.StaticContent("/app/jquery/choosen/chosen.jquery.min.js")"></script>
     @if (IsSectionDefined("Scripts"))
     {
-        <script type="text/javascript" src="@Url.StaticContent("/Scripts/jquery/jquery-1.8.3.min.js")"></script>
         if (Chalkable.Web.Tools.CompilerHelper.IsDebug)
         {
         <script type="text/javascript">
