--- a/Chalkable.Web/assets/sass/partials/main/people/_list.scss
+++ b/Chalkable.Web/assets/sass/partials/main/people/_list.scss
@@ -1,3 +1,20 @@
+.people-list-container{
+  padding-bottom: 5px;
+
+  .top{
+    height: 61px;
+    @include border-radius(5px 5px 0 0);
+
+    span{
+      color: #5d5d5d;
+      text-shadow: 1px 1px 0 white;
+      font: bold 12px Arial;
+      margin: 21px 45px;
+      float: right;
+    }
+  }
+}
+
 .people-list{
   .message-button{
     display: none;
