--- a/Chalkable.Web/assets/sass/screen.scss
+++ b/Chalkable.Web/assets/sass/screen.scss
@@ -223,7 +223,9 @@ HTML {
               padding-left: 0;
             }
 
-
+            #timezoneId{
+              width: 227px;
+            }
             input{
               width: 222px;
               border-radius: 5px;
