--- a/Chalkable.Web/assets/jade/activities/add-school/dialog.jade
+++ b/Chalkable.Web/assets/jade/activities/add-school/dialog.jade
@@ -4,7 +4,7 @@
     .x-window-body
         .general-info
             span.x-fieldset-header-text General Information
-            +ActionForm('sysadmin', 'addSchool')
+            +ActionForm('schools', 'addSchool')
                 .x-form-field
                     label Title:
                     input(type="text",name="name", value=self.name)
