--- a/Chalkable.Web/assets/jade/activities/school/SchoolDetails.jade
+++ b/Chalkable.Web/assets/jade/activities/school/SchoolDetails.jade
@@ -1,12 +1,13 @@
 .school-details
     .action-bar.not-transparent.buttons
         .container.panel-bg
+            //move this to some mixin
             .left
                 +ActionLink('schools', 'details', self.getId()).pressed Now
                 +ActionLink('schools', 'details', self.getId()) Schedule
                 +ActionLink('schools', 'people', self.getId()) People
                 +ActionLink('schools', 'details', self.getId()) Data
-                +ActionLink('schools', 'details', self.getId()) SIS
+                +ActionLink('schools', 'sisInfo', self.getId()) SIS
     .content
         .left
             +PhotoContainer('https://dev.chalkable.com/PersonPicture/Read?pictureId=132310&width=256&height=256&gender=m')
