--- a/Chalkable.Web/assets/jade/sidebars/SysAdminSidebar.jade
+++ b/Chalkable.Web/assets/jade/sidebars/SysAdminSidebar.jade
@@ -1,10 +1,10 @@
-+ActionLink('sysadmin', 'schools')#home-logo
++ActionLink('schools', 'list')#home-logo
 #sidebar-controls
     .search-wrapper
         #search-bar
     .wrapper
         .buttons-row
-            +ActionLink('sysadmin', 'schools').one-third-button.people(title="View Schools") Schools
+            +ActionLink('schools', 'list').one-third-button.people(title="View Schools") Schools
             +ActionLink('sysadmin', 'apps').one-third-button.apps(title="View Applications") Apps
             +ActionLink('sysadmin', 'settings').one-third-button.settings(title="View System Types") Settings
         .buttons-row
