--- a/Chalkable.Web/assets/jade/sidebars/SysAdminSidebar.jade
+++ b/Chalkable.Web/assets/jade/sidebars/SysAdminSidebar.jade
@@ -6,7 +6,7 @@
         .buttons-row
             +ActionLink('schools', 'list').one-third-button.people(title="View Schools") Schools
             +ActionLink('apps', 'list').one-third-button.apps(title="View Applications") Apps
-            +ActionLink('sysadmin', 'settings').one-third-button.settings(title="View System Types") Settings
+            +ActionLink('settings', 'dashboard').one-third-button.settings(title="View System Types") Settings
         .buttons-row
             +ActionLink('sysadmin', 'funds').one-third-button.statistic(title="View Purchase Order") Purchase Order
             +ActionLink('sysadmin', 'settings').one-third-button.settings(title="View Signups") Signups
