--- a/Chalkable.Web/Views/Home/Index.cshtml
+++ b/Chalkable.Web/Views/Home/Index.cshtml
@@ -50,7 +50,7 @@
                      <fieldset>
                         <div>
                            <div class="fake-input checkbox">
-                              <span><input id="RememberMe" name="RememberMe" type="checkbox" value="true"><input name="RememberMe" type="hidden" value="false"></span>
+                              <span><input id="RememberMe" name="remember" type="checkbox" value="true"><input name="remember" type="hidden" value="false"></span>
                            </div>
                         </div>
                      </fieldset>
