added popup activity

--- a/Chalkable.Web/assets/jade/activities/school/SchoolDetails.jade
+++ b/Chalkable.Web/assets/jade/activities/school/SchoolDetails.jade
@@ -1,4 +1,5 @@
 .school-details
+    -buttonText = getActionButtons()[self.getButtons()[0] - 1]
     .action-bar.not-transparent.buttons
         .container.panel-bg
             .left
@@ -7,12 +8,13 @@
                 +ActionLink('schools', 'people', self.getId()) People
                 +ActionLink('schools', 'details', self.getId()) Data
                 +ActionLink('schools', 'details', self.getId()) SIS
-    .content
+    .content.profile-page-margin
         .left
             +PhotoContainer('https://dev.chalkable.com/PersonPicture/Read?pictureId=132310&width=256&height=256&gender=m')
-        .right
+        .left.school-info
             h1= self.getName()
             .status #{self.getStatusNumber()}. #{self.getStatus()}
-                +Button().special-button2.blue My Button
+                +ActionLink('schools', 'actionButtons', self.getId())#show-buttons-popup
+                    +Button().special-button2.blue= buttonText
         .clear
 
