--- a/Chalkable.Web/assets/sass/partials/_main.scss
+++ b/Chalkable.Web/assets/sass/partials/_main.scss
@@ -1,5 +1,6 @@
 @import "compass/css3/border-radius";
 @import "compass/css3/images";
+@import "compass/css3/transform";
 
 @import "partials/main/_buttons";
 @import "partials/main/_profile";
@@ -53,6 +54,71 @@ BODY {
   }
 }
 
-.big-img-container{
+//LOADERS
 
+.horizontal-loader{
+  height: 20px;
+  position: absolute;
+  background: url(images/loaders/horizontal.gif) center center no-repeat;
+  left: 0;
+  right: 0;
+  bottom: -25px;
+}
+
+#chlk-pop-up-container{
+  position: absolute;
+  min-height: 85px;
+  @include border-radius(6px);
+  background: #EEE;
+  border-color: #B7B7B7;
+  @include box-shadow(0 2px 6px 0px #989897);
+  text-shadow: white 0px 1px 1px;
+  padding: 7px;
+
+  #pop-up-triangle{
+    position: absolute;
+    height: 10px;
+    background: url(images/common/window-triangle-top.png) center center no-repeat;
+  }
+
+  &.popup-bottom, &.popup-top{
+    #pop-up-triangle{
+      left: 0;
+      right: 0;
+    }
+  }
+
+  &.popup-bottom{
+    #pop-up-triangle{
+      top: -10px;
+    }
+  }
+
+  &.popup-top{
+    #pop-up-triangle{
+      bottom: -10px;
+      @include transform(rotate(180deg));
+    }
+  }
+
+  &.popup-left, &.popup-right{
+    #pop-up-triangle{
+      width: 16px;
+      top: 30px;
+    }
+  }
+
+  &.popup-left{
+    #pop-up-triangle{
+      right: -13px;
+      @include transform(rotate(90deg));
+    }
+  }
+
+  &.popup-right{
+    #pop-up-triangle{
+      left: -13px;
+      @include transform(rotate(270deg));
+    }
+  }
 }
