--- a/Chalkable.Web/assets/sass/partials/main/_buttons.scss
+++ b/Chalkable.Web/assets/sass/partials/main/_buttons.scss
@@ -132,6 +132,10 @@
   width: auto;
   display: inline-block;
   background-repeat: no-repeat;
+  font: {
+    size: 18px;
+    family: Arial;
+  }
   > SPAN {
     min-height: 33px;
     padding-right: 9px;
