added signup controller

--- a/Chalkable.Web/assets/jade/activities/bgtasks/BgTasks.jade
+++ b/Chalkable.Web/assets/jade/activities/bgtasks/BgTasks.jade
@@ -15,7 +15,7 @@
                         .td created
                         .td scheduled
                         .td completed
-                        .td= item.getTaskState()
+                        .td= item.getTaskState().toString()
                         .td= item.getTaskType()
                         .td.action-links
                             +ActionLink('backgroundtask', 'details', item.getId()).profile
