--- a/Chalkable.Web/assets/jade/sidebars/SysAdminSidebar.jade
+++ b/Chalkable.Web/assets/jade/sidebars/SysAdminSidebar.jade
@@ -9,5 +9,5 @@
             +ActionLink('settings', 'dashboard').one-third-button.settings(title="View System Types") Settings
         .buttons-row
             +ActionLink('sysadmin', 'funds').one-third-button.statistic(title="View Purchase Order") Purchase Order
-            +ActionLink('sysadmin', 'settings').one-third-button.settings(title="View Signups") Signups
+            +ActionLink('signup', 'list').one-third-button.settings(title="View Signups") Signups
 #invite-button-container
