--- a/Chalkable.Web/assets/jade/activities/apps/Apps.jade
+++ b/Chalkable.Web/assets/jade/activities/apps/Apps.jade
@@ -14,6 +14,6 @@
                         .td
                         .td.action-links
                             +ActionLink('apps', 'details', item.getId()).profile
-                            +ActionLink('apps', 'delete').remove
+                            +ActionLink('apps', 'delete', item.getId()).remove
         +Paginator('apps', 'list', self)
 
