--- a/Chalkable.Web/assets/jade/sidebars/SysAdminSidebar.jade
+++ b/Chalkable.Web/assets/jade/sidebars/SysAdminSidebar.jade
@@ -8,6 +8,6 @@
             +ActionLink('apps', 'list').one-third-button.apps(title="View Applications") Apps
             +ActionLink('settings', 'dashboard').one-third-button.settings(title="View System Types") Settings
         .buttons-row
-            +ActionLink('sysadmin', 'funds').one-third-button.statistic(title="View Purchase Order") Purchase Order
+            +ActionLink('funds', 'list').one-third-button.statistic(title="View Purchase Order") Purchase Order
             +ActionLink('signup', 'list').one-third-button.settings(title="View Signups") Signups
 #invite-button-container
