--- a/Chalkable.Web/assets/jade/activities/funds/Funds.jade
+++ b/Chalkable.Web/assets/jade/activities/funds/Funds.jade
@@ -16,7 +16,7 @@
                         .td= item.getSchoolName()
                         .td= item.getPoNumber()
                         .td= item.getDisplayName()
-                        .td Created on
+                        .td= item.getCreated().toString('d/m/y')
                         .td= item.getAmount()
                         .td= item.getTerms()
                         .td
